@@ -1,0 +1,9 @@
+## RestMini Client ##
+
+#### Requirements ####
+
+- PHP >=7.0
+- PHP cURL extension
+- [PSR-3 Log](https://github.com/php-fig/log)
+- [SimpleComplex Inspect](https://github.com/simplecomplex/inspect)
+- [SimpleComplex Utils](https://github.com/simplecomplex/php-utils)
