@@ -1,3 +1,8 @@
+restmini 1.x, 2017-07-12
+------------------------
+- Attempt to get PSR-logger from dependency injection container.
+  Use error_log() as fallback if no logger and severity error or worse.
+
 restmini 1.x, 2017-06-16
 ------------------------
 - Removed configurability; because no real need.
